--- a/README
+++ b/README
@@ -7,9 +7,13 @@ Required environment:
     Intel Parellel Studio (tested 19.1.0)
     cmake (tested 3.15.1)
     perl (tested 5.26.2)
+    automake (tested 1.16.1 for lex/yacc otherwise 1.13.4) 
+    gettext (tested 0.19.8.1)
+    yacc (tested 1.9)
+    flex (tested 2.6.4)
 
 The Intel compilers, Intel MPI, cmake and perl need to be loadable through the module facility.
-This script requires 2 passes to build WRF, 3 for WRF/WPS.
+This script requires 2 passes to build WRF, 3 for WRF/WPS. 
 
 
 (1) Edit the script worf.sh parameter block top of the file to match the localenvironment.
